<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="days_of_the_week_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="chores_divison_periods">
        <item>Twice a Week</item>
        <item>Once a Week</item>
        <item>Every Two Weeks</item>
        <item>Every Three Weeks</item>
        <item>Every Four Weeks</item>
        <item>Every Five Weeks</item>
        <item>Every Six Weeks</item>
        <item>Once a Month</item>
        <item>Every Two Months</item>
    </string-array>

    <string name="app_name">Chores</string>
    <string name="action_settings">Settings</string>
    <string name="apartment_editChoresButton">Add/Edit Chores</string>
    <string name="apartment_inviteButton">Invite roomates</string>
    <string name="apartment_settingsButton">Apartment settings</string>
    <string name="apartment_tableTitle">Apartment chores</string>
    <string name="apartment_historyButtoonText">Show more history</string>
    <string name="card_img_description">image of card</string>
    <string name="title_activity_apartment_settings">Apartment Settings</string>
    <string name="title_activity_apartment">Apartment</string>
    <string name="title_activity_add_edit_chores">Add or edit chores</string>
    <string name="title_activity_chore_card">Chore Card</string>
    <string name="apartment_leaveButton">Leave apartment</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="title_activity_settings_fragment">Settings Fragment</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="notifications_settings_roomate_missed_chore">Roommate missed a chore</string>
    <string name="notifications_settings_roomate_stole_chore">Roommate stole my chore</string>
    <string name="notifications_settings_roomate_finished_chore">Roommate finished a chore</string>
    <string name="notifications_settings_new_chores">New chores divided</string>
    <string name="chores_title">Chores</string>
    <string name="chores_settings_forbid">Forbid roomates from taking my chores</string>
    <string name="chores_settings_disable_reminders">Disable reminders about upcoming chores</string>
    <string name="reminders_title">Reminders</string>
    <string name="reminders_settings_hours">hours reminder before deadline</string>
    <string name="card_deadline_textStart">Deadline:  </string>
    <string name="card_choretype_textStart">Chore type:  </string>
    <string name="card_funfact_textStart">Fun fact:  </string>
    <string name="card_statistics_textStart">Statistics:  </string>
    <string name="card_coins_num_textend">X</string>
    <string name="button_suggestchore_text">Suggest chore</string>
    <string name="button_stealchore_text">Steal chore</string>
    <string name="button_done_text">I\'m done!</string>
    <string name="my_chores_headline_text">My Chores</string>
    <string name="my_chores_row_title_placeholder">Chore placeholder</string>
    <string name="chore_edit_button_text">Edit Chore</string>
    <string name="parse_client_key">CBnyHLzYGwlBz1YAOFMFakzalqWVosN3JRmpLmx4</string>
    <string name="parse_windows_key">n3yY1qWyL1qJ4HMZqGUE3mhX0lrdvXJuYuCIvOUo</string>
    <string name="parse_rest_key">Key 7ATSYPzLCuIUgxsMFKuwOFaFhdiqC2WQrlo21Jtv</string>
    <string name="parse_master_key">dneNmljVEFIMdiRAmPGLGvXt8ZjpAJgITQvisWBq</string>
    <string name="parse_app_id">G3vUvpy8mCgucxXp2RnSnFBs490CqfpWItmfA9hc</string>
    <string name="title_activity_my_chores">MyChoresActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_apartment_dialog_title_text">Creating new apartment</string>
    <string name="new_apartment_dialog_name_prompt">Choose a name for your apartment.</string>
    <string name="help_icon_text">Click for help</string>
    <string name="new_apartment_dialog_chores_division_prompt">Choose on what day chores will given</string>
    <string name="new_apartment_dialog_divison_period_prompt">How often chores will be divided?</string>
    <string name="new_apartment_dialog_create">Create Apartment</string>
    <string name="new_apartment_dialog_name_hint">E.g. your apartment\'s address</string>
    <string name="new_apartment_invite_roommates_prompt">Invite your roommates</string>
    <string name="title_activity_chores_action_bar">ChoresActionBarActivity</string>
    <string name="title_activity_new_chore_dialog">NewChoreDialogActivity</string>
    <string name="new_chore_dialog_what_text">What should be done?</string>
    <string name="new_chore_dialog_how_many_prompt">Who many times?</string>
    <string name="new_chore_dialog_every_prompt">Every&#8230;</string>
    <string name="new_chore_dialog_coins_text">coins.</string>
    <string name="new_chore_dialog_value_prompt">"For how many "</string>
    <string name="new_chore_dialog_everyone_checkbox_text">Should be done by everyone together.</string>
    <string name="new_chore_dialog_create_button_text">Create Chore</string>
    <string name="new_chore_dialog_cancel_button_text">Discard</string>
    <string name="card_activity_extra1_name">choreData</string>
    <string name="card_activity_extra2_name">ownerOpen</string>
    <string name="title_activity_daltest">DALTestActivity</string>
    <string name="add_edit_chores_title">Add or edit chores</string>
    <string name="add_edit_chores_add_chore_button_title">Add chore</string>
    <string name="new_chore_extra1_name">choreData</string>
    <string name="new_apartment_dialog_invite_autocomplete_prompt">Type contact name, E-Mail or Phone number</string>
    <string name="new_apartment_dialog_invite_button_text">Invite!</string>
    <string name="new_chore_before_coins_spinner">value:</string>
    <string name="new_chore_dialog_update_button_text">Update Chore</string>
    <string name="new_chore_dialog_values_most_chosen">  (most chosen)</string>
</resources>
