<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsFragment" >

    <TextView
        android:id="@+id/Settings_NotificationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <CheckBox
        android:id="@+id/NotificationsSettingRoomateMissedChoreCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Settings_NotificationsTitle"
        android:layout_below="@+id/Settings_NotificationsTitle"
        android:text="@string/notifications_settings_roomate_missed_chore" />

    <CheckBox
        android:id="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:layout_below="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:text="@string/notifications_settings_roomate_stole_chore" />

    <CheckBox
        android:id="@+id/ChoresSettingsForbidCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:layout_below="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:text="@string/chores_settings_forbid" />

    <TextView
        android:id="@+id/RemindersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresSettingsForbidCheckbox"
        android:layout_below="@+id/ChoresSettingsForbidCheckbox"
        android:layout_marginTop="22dp"
        android:text="@string/reminders_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/RemindersHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RemindersSettingsHours"
        android:layout_alignLeft="@+id/RemindersTitle"
        android:layout_alignRight="@+id/ChoresTitle"
        android:ems="10" />

    <TextView
        android:id="@+id/RemindersSettingsHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RemindersTitle"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/RemindersHoursText"
        android:text="@string/reminders_settings_hours"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:layout_below="@+id/NotificationsSettingsRoomateStoleChoreCheckbox"
        android:text="@string/notifications_settings_new_chores" />

    <CheckBox
        android:id="@+id/ChoresSettingsDisableRemindersCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChoresTitle"
        android:layout_below="@+id/ChoresTitle"
        android:text="@string/chores_settings_disable_reminders" />

    <CheckBox
        android:id="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:layout_below="@+id/NotificationsSettingsRoomateFinishedChoreCheckbox"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="73dp"
        android:text="@string/notifications_settings_roomate_finished_chore" />

    <TextView
        android:id="@+id/ChoresTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_below="@+id/NotificationsSettingsNewChoresCheckbox"
        android:layout_marginTop="43dp"
        android:text="@string/chores_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>
